# mc-server-view

./: .env  .env.example  .gitignore  Cargo.toml  README.md
src/: api.rs  attempt.rs  control.rs  endpoint_helpers.rs  env.rs  main.rs  navigation.rs
ui/: package-lock.json  package.json
ui/src/: App.js
ui/src/components/: QueryData.js
ui/src/helpers/: query.js
