[package]
name = "mc-server-view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
env_logger = "0.10.0"
mc-query = { git = "https://github.com/dheerajpv/mc-query", branch = "main" }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
thiserror = "1.0.38"
